--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       </div>
     </div>
   </div>
-
+  </main>
+  
   <footer class="blog-footer">
   <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
   <p>
