--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <h3 class="mb-0">Featured post</h3>
+          <h3 class="mb-0">Month/Date</h3>
           <div class="mb-1 text-muted">Mar 13</div>
           <div class="mb-1 text-muted">Mar 14</div>
           <div class="mb-1 text-muted">Mar 15</div>
@@ -118,9 +118,9 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <h3 class="mb-0">Post title</h3>
-          <div class="mb-1 text-muted">Marth</div>
-          <p class="mb-auto">Falchion.</p>
+          <h3 class="mb-0">Headlines</h3>
+          <div class="mb-1 text-muted">Marth, The war criminal of Archanea.</div>
+          <p class="mb-auto">Alm, The hero of Valentia.</p>
         </div>
       </div>
     </div>
