--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <h3 class="mb-0">Headlines</h3>
-          <div href="#" class="mb-1 text-muted">Marth, The war criminal of Archanea.</div>
-          <p href="#" class="mb-auto">Alm, The hero of Valentia.</p>
+          <a href="#" class="mb-auto">Marth, The war criminal of Archanea.</a>
+          <a href="#" class="mb-auto">Alm, The hero of Valentia.</a>
         </div>
       </div>
     </div>
