--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-3">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <h3 class="mb-0">Headlines</h3>
-          <a href="#" class="mb-auto">Marth, The war criminal of Archanea.</a>
-          <a href="#" class="mb-auto">Alm, The hero of Valentia.</a>
+          <a href="#" class="stretched-link">Marth, The war criminal of Archanea.</a>
+          <a href="#" class="stretched-link">Alm, The hero of Valentia.</a>
         </div>
       </div>
     </div>
