--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <div class="col p-4 d-flex flex-column position-static">
           <h3 class="mb-0">Headlines</h3>
           <a href="#" class="stretched-link">Marth, The war criminal of Archanea.</a>
+          </div>
           <a href="#" class="stretched-link">Alm, The hero of Valentia.</a>
         </div>
       </div>
